# embodiOS

./: .coverage  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  API_TESTING_RESULTS.md  ARCHITECTURE_COMPARISON.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CHANGES_2025-07-30.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  E2E_VERIFICATION_RESULTS.md  GGUF_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANUAL_TESTING_GUIDE.md  MODEL_INFERENCE_TESTING.md  Makefile  OPTIMIZATION_PROOF.md  OPTIMIZATION_SUMMARY.md  PROOF_NO_OS_OVERHEAD.md  QUICK-TEST-GUIDE.txt  README.md  README_AI_PROOF.md  SECURITY.md  SUBTASK-2-1-SUMMARY.md  SUBTASK-2-3-SUMMARY.md  SUBTASK_3-1_VERIFICATION.md  SUBTASK_COMPLETION_SUMMARY.md  TCP_SEND_TEST_RESULTS.md  TESTING-VIRTIO-BLOCK.md  TESTING_SUMMARY.md  TEST_STATUS.md  TYPE_FIXES.md  benchmark_metrics.py  build.sh  check_cli.py  demo_alerting.py  (+19 more)
kernel/: .clang-format  CMakeLists.txt  Makefile  NVME_VERIFICATION.md  README.md  TEST_AI_RUNTIME.md  TVMBENCH_VERIFICATION.md  TVM_E2E_TEST_GUIDE.md  embodios.elf.signed  test.mk  test_qemu.sh  timer.c
kernel/ai/: SIMD_AUDIT.md  accelerator_client.c  benchmark.c  boot_models.c  bpe_tokenizer.c  e2e_gpu_test.c  embedded_model_stubs.c  embedded_weights.c  embedding_benchmark.c  embeddings.c  embodios_format.c  example_model.c  fixed_point.c  gguf_inference.c  gguf_integer_loader.c  gguf_loader.c  gguf_parser.c  gguf_to_tvm.c  gpu_backend.c  inference.c  inference_test.c  initrd_loader.c  kv_cache.c  kv_cache_benchmark.c  kv_cache_enhanced.c  memory_opt.c  model_loader.c  model_manager.c  model_registry.c  model_runtime.c  parallel_inference.c  quantized_inference.c  quantized_matmul_simd.c  quantized_ops.c  quantized_test.c  real_inference.c  simd_ops.c  simple_llm.c  streaming_inference.c  tensor_ops.c  (+16 more)
kernel/ai/shaders/: matmul_q4_k.comp  matmul_q5_k.comp  (+2 more)
kernel/config/: embodios.conf.example  secureboot.conf
kernel/core/: console.c  dma.c  dma_test.c  gdb_stub.c  hal_cpu.c  hal_timer.c  interrupt.c  kernel.c  lock_test.c  panic.c  percpu.c  profiler.c  stubs.c  task.c
kernel/lib/: compat_stubs.c  gcov_stubs.c  math.c  stdlib.c  string.c
kernel/llama_cpp/: README.md  kernel_stubs.cpp  llama_kernel.cpp
kernel/mm/: heap.c  pmm.c  slab.c  vmm.c
kernel/net/: ethercat.c  modbus.c  tcpip.c
kernel/scripts/: build_with_model.py  create_bootable.sh  debug_kernel.sh  download_shim.sh  gdb_commands.gdb  generate_keys.sh  make_iso.sh  sign_kernel.sh  test_secureboot.sh  verify_cert_chain.sh
kernel/secure-boot/: CERTIFICATES.txt  DB.crt  KEK.crt  PK.crt
kernel/test/: example_test.c  test_ethercat.c  test_framework.c  test_hires_timer.c  test_modbus.c  test_pmm  test_pmm.c  test_profiler.c  test_scheduler.c  test_slab  test_slab.c  test_tcp_hardening.c  test_vmm.c
(+318 files in other folders)
